# PayNetOpenPayment

./: .gitignore  App.tsx  README.md  package-lock.json  package.json  tsconfig.json
ai-verification/: __init__.py  example.py  main.py  requirements.txt
ai-verification/config/: __init__.py  settings.py
ai-verification/database_verification/: database_service.py
ai-verification/document_verification/: document_service.py
ai-verification/face_recognition/: face_service.py
ai-verification/liveness_detection/: liveness_service.py
ai-verification/models/: __init__.py  schemas.py
ai-verification/ocr/: ocr_service.py
ai-verification/utils/: image_utils.py
app/: page.tsx
components/: AppButton.tsx  AppCard.tsx  Themed.tsx
constants/: Colors.ts
deepfake-detection/: __init__.py  example.py  main.py  requirements.txt
deepfake-detection/config/: settings.py
deepfake-detection/detection/: __init__.py  audio_detector.py  visual_detector.py
deepfake-detection/models/: schemas.py
deepfake-detection/preprocessing/: audio_preprocessor.py  (+1 more)
frontend/: App.tsx  README.md  app.json  package-lock.json  package.json  pnpm-lock.yaml  requirements.txt
navigation/: AppNavigator.tsx
screens/: OfflineScreen.tsx  ProfileScreen.tsx  ScanScreen.tsx  TreeInvestmentScreen.tsx  UserLoginScreen.tsx  WelcomeScreen.tsx
theme/: theme.ts
ueba/: __init__.py  main.py  requirements.txt
zkp-bindings/: .gitignore  Cargo.toml  README.md
zkp-bindings/mobile/: Cargo.toml
zkp-bindings/mobile/src/: lib.rs
zkp-bindings/mobile/src/android/: mod.rs  zkp_jni.rs
zkp-bindings/mobile/src/ios/: mod.rs  zkp_ffi.rs
zkp-bindings/nodejs/: Cargo.toml  package.json
zkp-bindings/nodejs/src/: index.ts  types.ts
zkp-bindings/wasm/: Cargo.toml
zkp-bindings/wasm/src/: lib.rs
zkp-circuit/: .gitignore  Cargo.toml
zkp-circuit/examples/: simple_proof.rs
zkp-circuit/src/: config.rs  lib.rs
zkp-circuit/src/circuit/: biometric_circuit.rs  constraints.rs  gadgets.rs  mod.rs
zkp-circuit/src/crypto/: commitments.rs  field_utils.rs  hash.rs  mod.rs
zkp-circuit/src/proof/: mod.rs
zkp-circuit/src/types/: embedding.rs  error.rs  mod.rs  proof_data.rs
zkp-circuit/src/utils/: mod.rs  scalar_utils.rs  serialization.rs  validation.rs
zkp-circuit/tests/: circuit_tests.rs  integration_tests.rs
(+54 files in other folders)
