[package]
name = "zkp-circuit"
version = "0.1.0"
edition = "2021"
authors = ["PayNet Team"]
description = "ZKP Circuit for Biometric Authentication using Bulletproofs"

[dependencies]
bulletproofs = { version = "4.0", features = ["yoloproofs"] }
curve25519-dalek-ng = "4.1"
merlin = "3.0"
rand = "0.8"
rand_core = "0.6"
serde = { version = "1.0", features = ["derive"] }
blake3 = "1.0"
sha2 = "0.10"
serde_json = "1.0"
thiserror = "1.0"
hex = "0.4"
base64 = "0.21"

[dev-dependencies]
criterion = "0.5"

[[bench]]
name = "performance"
harness = false

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
wasm = ["wasm-bindgen"]

[dependencies.wasm-bindgen]
version = "0.2"
optional = true
