[package]
name = "zkp-mobile-bindings"
version = "0.1.0"
edition = "2021"

[lib]
name = "zkp_mobile"
crate-type = ["cdylib", "staticlib"]
path = "src/lib.rs"

[dependencies]
zkp-circuit = { path = "../../zkp-circuit" }
jni = "0.21"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
curve25519-dalek-ng = "4.1"

[profile.release]
lto = true
codegen-units = 1
panic = "abort"

[package.metadata.android]
package = "com.paynet.zkp"
