[package]
name = "zkp-nodejs-bindings"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
zkp-circuit = { path = "../../zkp-circuit" }
neon = { version = "0.10", default-features = false, features = ["napi-6"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
curve25519-dalek-ng = "4.1"

[profile.release]
lto = true
codegen-units = 1
